# morpheus-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
plans/: morpheus-mcp-mvp.md
src/morpheus_mcp/: __init__.py  config.py
src/morpheus_mcp/cli/: app.py
src/morpheus_mcp/core/: __init__.py  engine.py  parser.py  store.py
src/morpheus_mcp/mcp/: __main__.py  formatters.py  server.py
src/morpheus_mcp/models/: __init__.py  enums.py  plan.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_integration.py  test_mcp_server.py  test_parser.py  test_store.py
