[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morpheus-mcp"
version = "0.3.0"
description = "Plan state management and phase gate enforcement for AI dev loops via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "EvoIntel", email = "evo.nirvana@gmail.com"}]
keywords = ["mcp", "ai", "dev-loop", "orchestrator", "plan-management", "gate-enforcement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/evo-hydra/morpheus-mcp"
Repository = "https://github.com/evo-hydra/morpheus-mcp"
Issues = "https://github.com/evo-hydra/morpheus-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
morpheus = "morpheus_mcp.cli.app:main"
morpheus-mcp = "morpheus_mcp.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/morpheus_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PLW"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["morpheus_mcp"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["morpheus_mcp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = ["if __name__", "def main"]
omit = [
    "src/morpheus_mcp/mcp/__main__.py",
    "src/morpheus_mcp/mcp/server.py",
]
